--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -1,4 +1,5 @@
+
+<h1>Welcome to Live-Stream Demo</h1>
 <p>
-  home-component works!
-  <a [routerLink]="['/livestream/smit']">Classes</a>
+  <a [routerLink]="['/livestream/smit']">Get started</a>
 </p>
