added hack&tell channel

--- a/src/app/home-component/home.component.html
+++ b/src/app/home-component/home.component.html
@@ -1,5 +1,5 @@
 
 <h1>Welcome to Live-Stream Demo</h1>
-<p>
-  <a [routerLink]="['/livestream/smit']">Get started</a>
-</p>
+  <h3>Channels</h3>
+  <a [routerLink]="['/livestream/smit']">Get started</a><br>
+  <a [routerLink]="['/livestream/hackandtell']">Hack and Tell Demo</a><br>
